--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "utilcores",
-  "version": "0.1.0",
+  "version": "0.0.0-rc1.0",
   "description": "A small utility core library for building basic data flows and component interraction.",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.dev.config",
     "lint": "tslint -c tslint.json 'src/**/*.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/utilCores/utilCores#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^23.3.9",
     "babel-cli": "^6.26.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.4",
