--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A small utility core library for building basic data flows and component interraction.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config config/webpack.dev.config",
+    "start": "webpack-dev-server --config config/webpack.dev.config --colors --progress",
+    "prebuild": "rimraf public/",
+    "build": "webpack -p --progress --config config/webpack.config",
     "lint": "tslint -c tslint.json 'src/**/*.ts",
     "test": "jest --watch"
   },
@@ -28,6 +30,7 @@
     "babel-cli": "^6.26.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
