--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "module": "es6",
     "target": "es5",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": "src",
+    "paths": {
+        "@/*": [ "src/*" ],
+    }
   }
 }
